[gd_scene load_steps=3 format=3 uid="uid://bf5cho0i8da4p"]

[ext_resource type="Theme" uid="uid://8awncr10kw81" path="res://styles/dark_theme.tres" id="1_tq7xw"]
[ext_resource type="Script" path="res://scenes/title/song_selection/song_item/song_item.gd" id="2_7f65r"]

[node name="SongItem" type="Button"]
custom_minimum_size = Vector2(640, 64)
offset_right = 640.0
offset_bottom = 64.0
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
theme = ExtResource("1_tq7xw")
script = ExtResource("2_7f65r")

[node name="ArtistName" type="Label" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 8.0
offset_right = 629.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1

[node name="Difficulty" type="Label" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 32.0
offset_right = 632.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1

[node name="TitleScroll" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 56.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="SongTitle" type="Label" parent="TitleScroll"]
custom_minimum_size = Vector2(368, 48)
layout_mode = 2
vertical_alignment = 1
justification_flags = 162

[node name="Timer" type="Timer" parent="TitleScroll"]
wait_time = 2.0
one_shot = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="TitleScroll/Timer" to="." method="_on_timer_timeout"]
